remove socket maps; EventSystem AutoCloseable -> Closeable; fix compilation